--- a/src/LoadingRing.css
+++ b/src/LoadingRing.css
@@ -12,10 +12,10 @@
     line-height: 150px;
     font-family: sans-serif;
     font-size: 20px;
-    color: #00FA9E;
+    color: #FFFFFF;
     letter-spacing: 4px;
     text-transform: uppercase;
-    text-shadow: 0 0 10px #00FA9E;
+    text-shadow: 0 0 10px #FFFFFF;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   }
 
@@ -35,8 +35,8 @@
     width: 100%;
     height: 100%;
     border: 3px solid transparent;
-    border-top: 3px solid #00FA9E;
-    border-right: 3px solid #00FA9E;
+    border-top: 3px solid #FFFFFF;
+    border-right: 3px solid #FFFFFF;
     border-radius: 50%;
     animation: animateC 2s linear infinite;
   }
@@ -59,10 +59,10 @@
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    background: #00FA9E;
+    background: #FFFFFF;
     top: -6px;
     right: -8px;
-    box-shadow: 0 0 20px #00FA9E;
+    box-shadow: 0 0 20px #FFFFFF;
   }
   
   @keyframes animateC {
