--- a/src/App.css
+++ b/src/App.css
@@ -236,13 +236,50 @@ body {
 }
 
 .nav-link {
-  padding: 10px;
+  padding:10px;
+  position: relative;
+  color: white;
+  text-decoration: none;
 }
 
 .nav-link.active {
   font-weight: bold;
 }
 
+.nav-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.3s ease-out;
+}
 
+.nav-link:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.footer-item {
+  transition: transform 0.3s ease-in-out;
+}
+
+.footer-item:hover {
+  transform: scale(1.2);
+}
+
+.footer-link {
+  color: white;
+  transition:transform 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.footer-link:hover {
+  color: white;
+  transform: scale(1.2);
+}
 
 
